2898 Add GraphQL controller for environments in the automation module, Introduce CE/EE-specific `EnvironmentServiceImpl` implementations